kubernetes/main/apps/observability/speedtest-exporter/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: speedtest-exporter
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: speedtest-exporter
  egress:
    # speedtest servers use arbitrary ports
    - toEntities: ["world"]
